# ongoing-learning

./: .gitignore  README.md
Hands-On_Machine_Learning/: Ch10-Intro_to_Neural_Networks_with_Keras.ipynb  Ch12-Custom_Models_and_Training_with_TensorFlow.ipynb  Ch13-Loading_and_Preprocessing_Data_with_TensorFlow.ipynb  Ch16_Natual_Language_Processing_with_RNNs_and_Attention.ipynb  Ch3-Classification.ipynb  Ch4_Training_Models.ipynb  Ch8-Dimensionality_Reduction.ipynb  MachineLearningProjectChecklist.txt  Transformer.ipynb  What_is_ROC.ipynb  ch11-TrainingDeepNeuralNetworks.ipynb  ch14_deep_computer_vision.ipynb  ch15_ProcessingSequencesUsingRNNsandCNNs.ipynb  ch17_Autoencoders_GANs_and_Diffusion_models.ipynb  ch18_Reinforcement_Learning.ipynb  ch19_Training_and_Deploying_TensorFlow_Models_at_Scale.ipynb  ch2-end_to_end_ml_project.ipynb  ch5-SupportVectorMachines.ipynb  ch7-DecisionTrees.ipynb  ch7-Ensemble_Learning_and_Random_Forests.ipynb  ch9-Unsupervised_Learning_Techniques.ipynb
Rust/: .gitignore
Second-Hand-Machine-Learning/: bach.py  ch10_image_classifier.py  ch10_mnist_challenge.py  ch10_regression.py  ch10_subclassing_api.py  ch10_tuner.py  (+7 more)
full-stack/api/: Dockerfile  main.py  pyproject.toml
llm-for-prod/: ex10_1.py  ex10_2.py  ex11_1.py  main.py  my_file.txt  pyproject.toml  tutorial10_1.py  tutorial10_2.py  tutorial11_1.py  tutorial11_2.py  tutorial1_1.py  tutorial1_2.py  tutorial6_1a.py  tutorial6_1b.py  tutorial6_1c.py  tutorial6_2.py  tutorial6_3.py  tutorial7_0a.py  tutorial7_0b.py  tutorial7_0c.py  tutorial7_0d.py  tutorial7_1.py  tutorial7_2.py  tutorial7_3.py  tutorial8_1.py  tutorial8_2.py  tutorial8_3_chat.py  tutorial8_3_script.py  tutorial8_4.py  tutorial8_5.py
(+196 files in other folders)
