[tool.poetry]
name = "llm-for-prod"
version = "0.1.0"
description = ""
authors = ["Rick Hall <rickhall2000@hotmail.com>"]
readme = "README.md"
packages = [{include = "llm_for_prod"}]

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.58.1"
langchain = "^0.3.13"
tiktoken = "^0.8.0"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
pypdf = "^5.1.0"
newspaper3k = "^0.2.8"
lxml-html-clean = "^0.4.1"
llama-index = "^0.12.9"
llama-index-vector-stores-chroma = "^0.4.1"
cohere = "^5.13.4"
chromadb = "^0.6.1"
llama-index-readers-wikipedia = "^0.3.0"
wikipedia = "^1.4.0"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
